objects/TIMBASURVEYS__Survey_Summary__c.object
<CustomObject>
    <fields>
        <fullName>TIMBASURVEYS__Complete_Survey_Name__c</fullName>
        <label>Complete Survey Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Survey Summaries</relationshipLabel>
        <relationshipName>Survey_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__RecipientEmail__c</fullName>
        <description>This is the email address of the recipient.</description>
        <label>Recipient Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__Recipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipient</label>
        <referenceTo>TIMBASURVEYS__Recipient__c</referenceTo>
        <relationshipLabel>Survey Summaries</relationshipLabel>
        <relationshipName>Survey_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__RelatedAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RelatedAccount</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Survey Summaries</relationshipLabel>
        <relationshipName>Survey_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__RelatedCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RelatedCase</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Survey Summaries</relationshipLabel>
        <relationshipName>Survey_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__RelatedContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RelatedContact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Survey Summaries (RelatedContact)</relationshipLabel>
        <relationshipName>Survey_Summaries2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__RelatedContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RelatedContract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Survey Summaries</relationshipLabel>
        <relationshipName>Survey_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__RelatedLead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RelatedLead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Survey Summaries</relationshipLabel>
        <relationshipName>Survey_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__RelatedOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RelatedOpportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Survey Summaries</relationshipLabel>
        <relationshipName>Survey_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__RelatedSolution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RelatedSolution</label>
        <referenceTo>Solution</referenceTo>
        <relationshipLabel>Survey Summaries</relationshipLabel>
        <relationshipName>Survey_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>TIMBASURVEYS__Survey__c</referenceTo>
        <relationshipLabel>Survey Summaries</relationshipLabel>
        <relationshipName>Survey_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__Total_Weight__c</fullName>
        <label>Total Weight</label>
        <summarizedField>TIMBASURVEYS__Question_Summary__c.TIMBASURVEYS__weight__c</summarizedField>
        <summaryForeignKey>TIMBASURVEYS__Question_Summary__c.TIMBASURVEYS__Survey_Summary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__Who_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user that sends the survey to the recipient</description>
        <label>Who Id</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Survey_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Survey Summary</label>
    <nameField>
        <label>Survey_Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>